# LLMRank

./: .gitignore  CHANGELOG.md  COMPATIBILITY_NOTES.md  README.local.md  README.md  README_NEW_FEATURES.md  RELEASE.md  generate_dashboard.py  generate_visualization.py  llmrank.ipynb  prompts.csv  prompts.xlsx  pyproject.toml  rankings.json  readme.md  requirements.txt  run_dev.py
.github/workflows/: publish.yml
docs/: README.md  index.html
examples/: README.md  compute_confidence.py  dashboard.py  prompt_categorization.py  prompts_categorized.csv  prompts_categorized.xlsx
responses/: endorsement_graph.gml
results/: category_analysis.csv  category_rankings.json  confidence_stats.json  dashboard.html  endorsement_graph.gml  evaluations.csv  rankings.json  raw_evaluations.csv  responses.csv
results-openrouter/: evaluations.csv  rankings.json  raw_evaluations.csv  responses.csv
results-openrouter/visualizations/: endorsement_graph.gml
results/visualizations/: endorsement_graph.gml
scripts/: create_github_release.py
sloprank/: __init__.py  __main__.py  cli.py  collect.py  config.py  pandas_backend.py  parse.py  rank.py
sloprank/utils/: __init__.py  categorization.py  commands.py  confidence.py  dashboard.py  visualization.py
tests/: README.md  mini_prompts.csv  mini_prompts.xlsx  test_sloprank.py  test_smoke.py  tiny_prompts.csv  tiny_prompts.xlsx
