[build-system]
requires = ["setuptools>=42", "wheel", "build", "twine"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []  # override the default behavior

[project]
name = "sloprank"
version = "0.1.0"
description = "Peer-based cross-evaluation system"
authors = [
  { name = "Rohit Krishnan", email = "rohit.krishnan@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "pandas>=1.5.0",
  "openpyxl>=3.0.10",
  "networkx>=2.8",
  "python-dotenv>=0.21.0",
  "click>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sloprank*"]
exclude = ["results", "results.*"]
