[build-system]
requires = ["setuptools>=42", "wheel", "build", "twine"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []  # override the default behavior

[project]
name = "sloprank"
version = "0.3.10"
description = "Peer-based LLM cross-evaluation system"
authors = [
  { name = "Rohit Krishnan", email = "rohit.krishnan@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "pandas>=1.5.0",
  "openpyxl>=3.0.10",
  "networkx>=2.8",
  "python-dotenv>=0.21.0",
  "click>=8.0.0",
  "numpy>=1.20.0",
  "matplotlib>=3.5.0",
  "parallm>=0.1.3"  # Included as core dependency for efficient response collection
]

[project.optional-dependencies]
parallm = [
  "parallm>=0.1.3"
]
vis = [
  "plotly>=5.5.0",
  "kaleido>=0.2.1"  # For static image export with plotly
]
dashboard = [
  "dash>=2.0.0",
  "dash-bootstrap-components>=1.0.0"
]
full = [
  "plotly>=5.5.0",
  "kaleido>=0.2.1",
  "dash>=2.0.0",
  "dash-bootstrap-components>=1.0.0",
  "parallm>=0.1.3"
]

[project.urls]
Homepage = "https://github.com/strangeloopcanon/LLMRank"

[tool.setuptools.packages.find]
where = ["."]
include = ["sloprank*"]
exclude = ["results", "results.*"]

[project.scripts]
sloprank = "sloprank.cli:main"
